--- a/html/51/style.css
+++ b/html/51/style.css
@@ -1,20 +1,22 @@
 html {
     background-color: rgb(255, 146, 107);
 }
+
 body {
     font-family: Arial, sans-serif;
     background-color: #d82e2e;
     margin: 0;
     padding: 10px;
+    padding-bottom: 0px;
     text-align: center;
-    
+
     margin: auto;
     max-width: 95%;
-    border : 2px solid black;
+    border: 2px solid black;
     margin-top: 3px;
     border-radius: 1rem;
-    
-    
+
+
 }
 
 
@@ -33,6 +35,7 @@ header {
 a:visited {
     color: #0000EE
 }
+
 a:hover {
     color: #FF0000;
 }
@@ -42,36 +45,51 @@ a:hover {
     height: auto;
 }
 
-#cheese-pizza-img{
-   
+#cheese-pizza-img {
+
     border: 2px solid black;
-   
+
     border-radius: 1rem;
     padding: 0px;
     margin: 0px;
-    
-    
+
+
 }
+
+
+footer {
+    color: #000000;
+}
+
+.content-div {
+    border-radius: 1rem;
+    background-color: rgb(255, 146, 107);
+    color: black;
+    border: 2px solid black;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+}
+
 .menu-table {
     border: 4px double black;
     border-collapse: collapse;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+
 }
-.menu-table td{
+
+.menu-table td {
     border: 4px double black;
     border-collapse: collapse;
-    padding: 10px;
+    padding: 0.5rem;
+
 }
 
 
-.menu-table td:nth-child(1){
-text-align: left;
-}
-.menu-table td:nth-child(2){
-text-align: right;
+.menu-table td:nth-child(1) {
+    text-align: left;
 }
 
-footer{
-    color:#000000;
+.menu-table td:nth-child(2) {
+    text-align: right;
 }
