--- a/html/51/style.css
+++ b/html/51/style.css
@@ -11,7 +11,8 @@ body {
     text-align: center;
 
     margin: auto;
-    max-width: 95%;
+    max-width: 800px;
+    min-width: 300px;
     border: 2px solid black;
     margin-top: 3px;
     border-radius: 1rem;
