--- a/html/53/style.css
+++ b/html/53/style.css
@@ -3,87 +3,95 @@
 
 html {
     background-color: rgb(255, 146, 107);
-    background-image: url(images/Amalfi-Coast-At-Night-Photo.webp);
-    background-position: cover center;
+    background-image: url(images/italy.jpeg);
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
+    margin: 0;
+    padding: 0;
+    cursor: url("images/pizza-pointer.cur"), none;
 }
 
-    body {
-        font-family: "Josefin Sans", sans-serif;
-        background-color: #d82e2e;
-        margin: 0;
-        padding: 10px;
-        padding-bottom: 0px;
-        text-align: center;
-        box-sizing: border-box;
-        margin: auto;
-        max-width: 800px;
-        min-width: 300px;
-        height: 100%;
-        border: 2px solid black;
-        margin-top: 3px;
-        margin-bottom: 3px;
-        border-radius: 1rem;
-        cursor: url("images/pizza-pointer.cur"), none;
+#pizza-video{
+    max-height: 35rem;
+}
+
+body {
+    font-family: "Josefin Sans", sans-serif;
+    xbackground-color: #2e6cd84e;
 
 
-    }
+    padding: 10px;
+    padding-bottom: 0px;
+    text-align: center;
+    box-sizing: border-box;
+    margin: auto;
+    max-width: 800px;
+    min-width: 300px;
+    min-height: calc(100vh - 6px);
+    xborder: 2px solid black;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    border-radius: 1rem;
+
+
+}
 
 
 
-    header {
-        border-radius: 1rem;
-        background-color: rgb(255, 146, 107);
-        color: black;
-        border: 2px solid black;
-        width: 100%;
-        padding-bottom: 10px;
-        margin-bottom: 1rem;
-        padding-top: 0px;
-    }
+header {
+    border-radius: 1rem;
+    background-color: rgb(255, 146, 107);
+    color: black;
+    border: 2px solid black;
+    width: 100%;
+    padding-bottom: 10px;
+    margin-bottom: 1rem;
+    padding-top: 0px;
+}
 
-    a:visited {
-        color: #0000EE
-    }
+a:visited {
+    color: #0000EE
+}
 
-    a:hover {
-        color: #FF0000;
-        cursor: url("images/over-link.cur"), none;
-    }
+a:hover {
+    color: #FF0000;
+    cursor: url("images/over-link.cur"), none;
+}
 
-    .full-width-img {
-        width: 100%;
-        height: auto;
-    }
+.full-width-img {
+    width: 100%;
+    height: auto;
+}
 
-    #cheese-pizza-img {
+#cheese-pizza-img {
 
-        border: 2px solid black;
+    border: 2px solid black;
 
-        border-radius: 1rem;
-        padding: 0px;
-        margin: 0px;
-
-
-    }
+    border-radius: 1rem;
+    padding: 0px;
+    margin: 0px;
 
 
-    footer {
-        color: #000000;
-    }
+}
 
-    .content-div {
-        border-radius: 1rem;
-        background-color: rgb(255, 146, 107);
-        color: black;
-        border: 2px solid black;
-        width: 100%;
-        margin-bottom: 1rem;
-        padding-bottom: 1rem;
-    }
 
-    /*.menu-table {
+footer {
+    color: #000000;
+}
+
+.content-div {
+    border-radius: 1rem;
+    background-color: rgb(255, 146, 107);
+    color: black;
+    border: 2px solid black;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+}
+
+/*.menu-table {
     border: 4px double black;
     border-collapse: collapse;
     margin: auto;
@@ -107,16 +115,16 @@ html {
 }
 */
 
-    .menu-item {
-        display: block;
-        margin-bottom: 1rem;
-    }
+.menu-item {
+    display: block;
+    margin-bottom: 1rem;
+}
 
-    .menu-item:hover {
-        scale: 1.5;
-        transition: scale 0.3s ease-in-out;
-    }
+.menu-item:hover {
+    scale: 1.5;
+    transition: scale 0.3s ease-in-out;
+}
 
-    h3 {
-        text-decoration: underline;
-    }
+h3 {
+    text-decoration: underline;
+}
