--- a/html/53/style.css
+++ b/html/53/style.css
@@ -18,6 +18,8 @@ html {
 }
 
 body {
+    margin: 9rem;
+    position: relative;
     font-family: "Josefin Sans", sans-serif;
     xbackground-color: #2e6cd84e;
 
@@ -41,6 +43,10 @@ body {
 
 
 header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     border-radius: 1rem;
     background-color: rgb(255, 146, 107);
     color: black;
@@ -49,6 +55,9 @@ header {
     padding-bottom: 10px;
     margin-bottom: 1rem;
     padding-top: 0px;
+    height: 9rem;
+    box-sizing: border-box;
+    
 }
 
 a:visited {
@@ -78,6 +87,10 @@ a:hover {
 
 
 footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     color: #000000;
 }
 
