--- a/js/blog/style.css
+++ b/js/blog/style.css
@@ -1,4 +1,5 @@
-.user-list {
+.user-list,
+.posts-list {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
@@ -6,9 +7,9 @@
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
 
 }
@@ -22,18 +23,24 @@
     margin: 10px 0;
     border-radius: 5px;
     background-color: #f9f9f9;
-    margin: auto;
+    xmargin: auto;
     cursor: pointer;
 }
 
-.posts-view {
+.posts-list {
     max-width: 800px;
-    margin: 20px auto;
+    margin: 40px auto;
     padding: 20px;
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 20px;
+
+
 }
 
 .user-card:hover {
@@ -43,7 +50,7 @@
 }
 
 .comments-box {
-margin-top: 10px;
+    margin-top: 10px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
