--- a/js/blog/style.css
+++ b/js/blog/style.css
@@ -56,3 +56,12 @@
     border-radius: 5px;
     background-color: #f1f1f1;
 }
+
+.post-card {
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-sizing: border-box;
+}
