--- a/js/93/blogReact/src/App.css
+++ b/js/93/blogReact/src/App.css
@@ -1,13 +1,14 @@
-body{
+body {
     padding-left: 5px;
     padding-right: 5px;
 }
+
 header {
     font-size: 25px;
     text-align: center;
     padding: 1rem 0;
     border-bottom: 1px solid #e0e0e0;
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 header a {
@@ -19,7 +20,8 @@ header a {
     transition: background-color 0.2s;
 }
 
-header a:hover, .user-card:hover {
+header a:hover,
+.user-card:hover {
     background-color: #f5f5f5;
     cursor: pointer;
 }
@@ -27,14 +29,17 @@ header a:hover, .user-card:hover {
 .active {
     background-color: #f5f5f5;
 }
-.user-card{
+
+.user-card {
     text-align: center;
-    border : 1px solid black;
-   border-radius: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 175px;
-    width: 300px
+    width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.user-card-div{
+
+.user-card-div {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -42,15 +47,16 @@ header a:hover, .user-card:hover {
     align-items: center;
 }
 
-.user-header{
+.user-header {
     text-align: center;
-    border : 1px solid black;
-   border-radius: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 175px;
-    width: 100%;
+    max-width: 840px;
     margin: 0 auto 20px auto;
     padding-top: 10px;
-    
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .posts-list {
@@ -60,6 +66,7 @@ header a:hover, .user-card:hover {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
     border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
@@ -69,13 +76,13 @@ header a:hover, .user-card:hover {
 
 }
 
-.visible{
+.visible {
     display: block;
 }
 
-.hidden{
+.hidden {
     display: none;
-}   
+}
 
 .comments-box {
     margin-top: 10px;
@@ -93,5 +100,56 @@ header a:hover, .user-card:hover {
     border-radius: 5px;
     background-color: #f9f9f9;
     box-sizing: border-box;
-    
+
+}
+
+.contactus-div {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.success {
+    color: green;
+}
+
+.fail {
+    color: red;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    max-width: 400px;
+    margin: 0 auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    max-width: fit-content;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px 50px;
+}
+
+.form-element {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    gap: 5px;
+}
+
+.result {
+    margin-top: 15px;
+
+    border: 1px solid black;
+    border-radius: 10px;
+    xbox-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: fit-content;
+    margin: 0 auto;
+    padding: 10px;
+    margin-top: 30px;
+
+}
+.message-input {
+    min-height:200px;
+    resize: vertical;
 }
